# savannah-tech-automation-assignment

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.tests  Makefile  README.md  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: tests.yml
config/environments/: dev.yaml  local.yaml  prod.yaml  staging.yaml
docs/: BUGS.md  EXECUTIVE_SUMMARY.md  IMAGE_ANALYSIS.md  TEST_PLAN.md
docs/evidence/: image_inspection.txt  load_summary.json  pentest_log.txt  probe_log.txt
scripts/: inspect_image.sh  run_tests.sh
src/firefly_qa/: __init__.py  client.py  config.py  contract.py  env_loader.py  factories.py  metrics.py
src/firefly_qa/endpoints/: __init__.py  assets.py  integrations.py
tests/: conftest.py  test_assets.py  test_auth.py  test_auth_fuzz.py  test_concurrency.py  test_contract.py  test_contract_full.py  test_contract_schemathesis.py  test_http_semantics.py  test_input_validation.py  test_integrations.py  test_load.py  test_load_extended.py  test_negative.py  test_pagination.py  test_security_pentest.py  test_security_smoke.py  test_tenant_isolation.py  test_tenant_isolation_deep.py
