[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "firefly-api-automation"
version = "0.2.0"
description = "Pytest automation framework for the Firefly Automation Engineer home assignment."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "jsonschema>=4.22.0",
    "referencing>=0.35.0",
    "pytest>=8.2.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
fuzz = ["schemathesis>=3.36.0"]
load = ["locust>=2.27.0"]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "contract: OpenAPI and response contract validation",
    "load: load and throughput checks",
    "tenant: tenant isolation checks",
    "auth: authentication and identity edge cases",
    "security: security smoke tests",
    "negative: negative / error-path tests",
    "pagination: pagination edge-case tests",
    "concurrency: concurrent / idempotency tests",
    "http_semantics: HTTP method, header, and status-code semantics",
    "input_validation: input boundary and validation tests",
    "smoke: minimal critical-path tests for fast CI feedback",
    "schemathesis: property-based contract fuzz (opt-in)",
    "destructive: tests that mutate or remove resources; skipped on read-only envs",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
